commented and delleted some files to quite swagger and add only postman
